--- a/css/main.css
+++ b/css/main.css
@@ -956,13 +956,6 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
-  .backdrop {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -979,7 +972,6 @@ body {
   top: 50%;
   left: 50%;
   padding: 40px;
-  max-width: 100%;
   min-height: 609px;
   background-color: #ffffff;
   -webkit-transform: translate(-50%, -50%) scale(1);
@@ -988,6 +980,12 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 450px) {
+  .modal {
+    max-width: 100%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1013,6 +1011,23 @@ body {
 
 .form {
   width: 448px;
+}
+
+@media screen and (max-width: 450px) {
+  .form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    /* justify-content: center; */
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 1199px) {
