--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,10 +10,10 @@
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width: 767px) {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+  // @media screen and (max-width: 450px) {
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  // }
 }
 
 .backdrop.is-hidden {
@@ -33,7 +33,7 @@
 
   padding: 40px;
 
-  max-width: 100%;
+  // max-width: 100%;
 
   // min-width: 450px;
   min-height: 609px;
@@ -43,6 +43,10 @@
   transform: translate(-50%, -50%) scale(1);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 450px) {
+    max-width: 100%;
+  }
 
   @media screen and (min-width: $desktop) {
     min-width: 528px;
@@ -70,6 +74,14 @@
 
 .form {
   width: 448px;
+
+  @media screen and (max-width: 450px) {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    width: 100%;
+  }
 
   @media screen and (max-width: 1199px) {
     width: 370px;
