--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -26,6 +26,10 @@
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -46,10 +50,10 @@
 
   @media screen and (max-width: 450px) {
     // max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     width: 100%;
   }
 
