--- a/css/main.css
+++ b/css/main.css
@@ -1029,6 +1029,7 @@ body {
 
 @media screen and (max-width: 450px) {
   .form {
+    display: block;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
