--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -85,7 +85,7 @@
   width: 448px;
 
   @media screen and (max-width: 450px) {
-    // display: block;
+    display: block;
     // flex-direction: column;
     justify-content: center;
     align-items: center;
