--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -57,6 +57,14 @@
     width: 100%;
   }
 
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 450px;
+  }
+
   @media screen and (min-width: $desktop) {
     min-width: 528px;
     min-height: 581px;
